添加三种背景选项：红丝带图案、医疗图标和抽象几何图形

--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@
             <p>© 2025 HAPPY Games™ 版权所有，保留所有权利。未经授权，禁止复制、分发或修改本产品的任何部分。</p>
             <p class="copyright-en">© 2025 HAPPY Games™ All rights reserved. Unauthorized copying, distribution, or modification of any part of this product is prohibited.</p>
         </div>
+        <div class="background-selector">
+            <span>背景选择：</span>
+            <button id="bg-ribbon-btn" class="bg-btn active" title="红丝带背景">🎗️</button>
+            <button id="bg-medical-btn" class="bg-btn" title="医疗图标背景">⚕️</button>
+            <button id="bg-geometric-btn" class="bg-btn" title="几何图形背景">◻️</button>
+        </div>
     </footer>
 
     <!-- Cookies政策详细页面 -->
